--- a/app/src/main/res/layout/c_authorization_user_logged_change_pass.xml
+++ b/app/src/main/res/layout/c_authorization_user_logged_change_pass.xml
@@ -7,7 +7,7 @@
 	<data>
 
 		<variable
-			name = "viewmodel"
+			name = "viewmodelmain"
 			type = "ru.jobni.jobni.viewmodel.MainViewModel"
 			/>
 
@@ -58,7 +58,7 @@
 					app:layout_constraintStart_toStartOf = "parent"
 					app:layout_constraintEnd_toEndOf = "parent"
 					android:layout_marginTop = "36dp"
-					app:viewmodel = "@{viewmodel}"
+					app:viewmodelmain = "@{viewmodelmain}"
 					app:viewmodelauth = "@{viewmodelauth}"
 					/>
 
@@ -84,7 +84,7 @@
 					android:layout_marginTop = "16dp"
 					android:background = "@drawable/shape_button"
 					android:text = "@string/btn_change_user_mail_text"
-					android:onClick = '@{() -> viewmodel.setFragmentLaunch("AuthUserLoggedMail")}'
+					android:onClick = '@{() -> viewmodelmain.setFragmentLaunch("AuthUserLoggedMail")}'
 					/>
 
 				<Button
