--- a/app/src/main/res/layout/c_social_network.xml
+++ b/app/src/main/res/layout/c_social_network.xml
@@ -39,7 +39,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_user"
             android:background = "@{safeUnbox(viewmodelauth.isBtnUserLoggedVisible()) ? @drawable/shape_button : @drawable/shape_badge}"
-            android:clickable = "@{safeUnbox(viewmodelauth.isBtnUserClickable()) ? true : false}"
+            android:clickable = "@{safeUnbox(viewmodelauth.isBtnUserNotClickable()) ? false : true}"
 			android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserMail" : (viewmodelauth.isBtnUserLoggedVisible() ? "AuthUserLogged" : "AuthUser"))}'
 			/>
 
