--- a/app/src/main/res/layout/list_item_child.xml
+++ b/app/src/main/res/layout/list_item_child.xml
@@ -18,7 +18,7 @@
 
 		<variable
 			name = "child"
-			type = "ru.jobni.jobni.model.menuleft.NavigationChild"
+			type = "ru.jobni.jobni.model.menu.NavigationChild"
 			/>
 	</data>
 
