--- a/app/src/main/res/layout/fragment_nav_right.xml
+++ b/app/src/main/res/layout/fragment_nav_right.xml
@@ -24,7 +24,9 @@
 			android:layout_width = "match_parent"
 			android:layout_height = "match_parent"
 			app:fixedSize = "@{true}"
-			app:layoutManager = "androidx.recyclerview.widget.LinearLayoutManager"
+
 			/>
 	</RelativeLayout>
 </layout>
+
+	<!--app:layoutManager = "androidx.recyclerview.widget.LinearLayoutManager"-->
