--- a/app/src/main/res/layout/c_card_vacancy_company_close.xml
+++ b/app/src/main/res/layout/c_card_vacancy_company_close.xml
@@ -347,7 +347,7 @@
 					android:layout_marginTop = "50dp"
 					android:background = "@color/theme_1_color_1"
 					android:drawableTop = "@drawable/ic_expand_more_black_24dp"
-					android:onClick = "@{() -> viewmodel.onExpandVacancyClick(position)}"
+					android:onClick = "@{() -> viewmodel.onExpandVacancyCompanyClick(position)}"
 					/>
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</androidx.cardview.widget.CardView>
