--- a/app/src/main/res/layout/list_item_child.xml
+++ b/app/src/main/res/layout/list_item_child.xml
@@ -35,5 +35,17 @@
 			android:gravity = "center_vertical"
 			tools:text = "Child Name"
 			/>
+
+		<CheckedTextView
+			android:id = "@+id/list_item_child_check"
+			android:visibility = "gone"
+			android:layout_width = "match_parent"
+			android:layout_height = "match_parent"
+			android:layout_marginStart = "@dimen/list_item_left_margin"
+			android:layout_marginEnd = "@dimen/horizontal_margin"
+			android:checkMark = "?android:attr/listChoiceIndicatorMultiple"
+			android:gravity = "center"
+			android:textAllCaps = "true"
+			/>
 	</FrameLayout>
 </layout>
