--- a/app/src/main/res/layout/c_registration_03.xml
+++ b/app/src/main/res/layout/c_registration_03.xml
@@ -72,17 +72,19 @@
             android:checked="@={viewmodel.regPublicOffers}"
             />
 
-        <Button android:id="@+id/registration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/background"
-                app:layout_constraintEnd_toEndOf="@+id/background"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"
-                android:background="@drawable/shape_button"
-                android:text="@string/registration"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
-                android:onClick="@{() -> viewmodel.btnRegClick()}"/>
+		<Button
+			android:id = "@+id/registration"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toBottomOf = "@+id/chb_consent_public_offers"
+			app:layout_constraintBottom_toBottomOf = "@+id/background"
+			app:layout_constraintEnd_toEndOf = "@+id/background"
+			android:layout_marginTop = "8dp"
+			android:layout_marginBottom = "16dp"
+			android:layout_marginEnd = "16dp"
+			android:background = "@drawable/shape_button"
+			android:text = "@string/registration"
+			android:onClick = "@{() -> viewmodel.btnRegContactFaceContactClick()}"
+			/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
