--- a/app/src/main/res/layout/c_registration_01_other.xml
+++ b/app/src/main/res/layout/c_registration_01_other.xml
@@ -6,6 +6,7 @@
     <data>
         <variable name="viewmodelreg" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
         <variable name="viewmodelmain" type="ru.jobni.jobni.viewmodel.MainViewModel"/>
+        <variable name="viewmodelauth" type="ru.jobni.jobni.viewmodel.AuthViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:tools="http://schemas.android.com/tools"
@@ -53,7 +54,9 @@
                  app:layout_constraintEnd_toEndOf="@+id/background"
                  android:layout_marginTop="16dp"
                  app:viewmodelreg="@{viewmodelreg}"
-                 app:viewmodelmain="@{viewmodelmain}"/>
+                 app:viewmodelmain="@{viewmodelmain}"
+                 app:viewmodelauth="@{viewmodelauth}"
+                    />
         <Button android:id="@+id/bind_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -62,15 +65,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/background"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/shape_button"
-                android:text="@string/bind_account"/>
-        <Button android:id="@+id/next"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/background"
-                app:layout_constraintEnd_toEndOf="@+id/background"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"
-                android:background="@drawable/shape_button"
-                android:text="@string/next"/>
+                android:text="@string/bind_account"
+                android:onClick="@{() -> viewmodelreg.getVKReg()}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
