--- a/app/src/main/res/layout/c_social_network.xml
+++ b/app/src/main/res/layout/c_social_network.xml
@@ -22,6 +22,7 @@
 				/>
 
 		<import type = "android.view.View"/>
+        <import type="java.lang.String"/>
 	</data>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
@@ -38,9 +39,9 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_phone"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_user"
-            android:background = "@{safeUnbox(viewmodelauth.isBtnUserLoggedVisible()) ? @drawable/shape_button : @drawable/shape_badge}"
+            android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("mail")) ? @drawable/shape_button : @drawable/shape_badge}'
             android:clickable = "@{safeUnbox(viewmodelauth.isBtnUserNotClickable()) ? false : true}"
-			android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserMail" : (viewmodelauth.isBtnUserLoggedVisible() ? "AuthUserLogged" : "AuthUser"))}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserMail" : (viewmodelauth.btnUserLogged.equals("mail") ? "AuthUserLogged" : "AuthUser"))}'
 			/>
 
 		<ImageButton
@@ -52,8 +53,8 @@
 				app:layout_constraintEnd_toStartOf="@+id/btn_vk"
 				android:layout_marginEnd="12dp"
 				app:srcCompat="@drawable/ic_phone"
-				android:background="@drawable/shape_badge"
-                android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserPhone" : "AuthUser")}'
+                android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("phone")) ? @drawable/shape_button : @drawable/shape_badge}'
+                android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserPhone" : "AuthUser")}'
 		/>
 		<ImageButton
 			android:id = "@+id/btn_vk"
@@ -64,8 +65,8 @@
 			app:layout_constraintEnd_toStartOf = "@+id/bnt_ok"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_vk"
-			android:background = "@drawable/shape_badge"
-            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+            android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("vk")) ? @drawable/shape_button : @drawable/shape_badge}'
+            android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegVK" : "AuthVK")}'
 			/>
 
 		<ImageButton
@@ -76,8 +77,8 @@
 			app:layout_constraintStart_toStartOf = "@+id/btn_mail_ru"
 			app:layout_constraintEnd_toEndOf = "@+id/btn_discord"
 			app:srcCompat = "@drawable/ic_ok"
-			android:background = "@drawable/shape_badge"
-            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+            android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("ok")) ? @drawable/shape_button : @drawable/shape_badge}'
+            android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -89,8 +90,8 @@
 			app:layout_constraintStart_toEndOf = "@+id/bnt_ok"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_instagram"
-			android:background = "@drawable/shape_badge"
-            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+            android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("inst")) ? @drawable/shape_button : @drawable/shape_badge}'
+            android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -102,8 +103,8 @@
 			app:layout_constraintStart_toEndOf = "@+id/btn_instagram"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_telegram"
-			android:background = "@drawable/shape_badge"
-            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+            android:background ='@{safeUnbox(viewmodelauth.btnUserLogged.equals("tel")) ? @drawable/shape_button : @drawable/shape_badge}'
+            android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -115,8 +116,8 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_facebook"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_gmail"
-			android:background = "@drawable/shape_badge"
-            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+            android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("google")) ? @drawable/shape_button : @drawable/shape_badge}'
+            android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -128,8 +129,8 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_mail_ru"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_facebook"
-			android:background = "@drawable/shape_badge"
-            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+            android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("fb")) ? @drawable/shape_button : @drawable/shape_badge}'
+            android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -143,8 +144,8 @@
 			android:layout_marginStart = "16dp"
 			android:layout_marginEnd = "16dp"
 			app:srcCompat = "@drawable/ic_mail_ru"
-			android:background = "@drawable/shape_badge"
-            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+            android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("mailru")) ? @drawable/shape_button : @drawable/shape_badge}'
+            android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -156,8 +157,8 @@
 			app:layout_constraintStart_toEndOf = "@+id/btn_mail_ru"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_discord"
-			android:background = "@drawable/shape_badge"
-            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+            android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("discord")) ? @drawable/shape_button : @drawable/shape_badge}'
+            android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -169,8 +170,8 @@
 			app:layout_constraintStart_toEndOf = "@+id/btn_discord"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_microsoft"
-			android:background = "@drawable/shape_badge"
-            android:onClick = '@{() -> viewmodelmain.setFragmentLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+            android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("micro")) ? @drawable/shape_button : @drawable/shape_badge}'
+            android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
