--- a/app/src/main/res/layout/c_registration_01_mail.xml
+++ b/app/src/main/res/layout/c_registration_01_mail.xml
@@ -137,7 +137,7 @@
 			android:layout_marginTop = "16dp"
 			android:background = "@drawable/shape_button"
 			android:text = "@string/bind_account"
-			android:onClick = "@{() -> viewmodelreg.btnRegUserClick()}"
+			android:onClick = '@{() -> viewmodelreg.startRegistration()}'
 			/>
 
 		<EditText
@@ -150,7 +150,7 @@
 			android:layout_marginTop = "16dp"
 			style = "@style/text_color_and_size"
 			android:inputType = "textPassword"
-			android:hint = "@string/password_4"
+			android:hint = "Введите код подтверждения"
 			android:text = "@={viewmodelreg.regMailCode}"
 			/>
 
@@ -163,7 +163,7 @@
 			app:layout_constraintEnd_toEndOf = "@+id/background"
 			android:layout_marginTop = "16dp"
 			android:background = "@drawable/shape_button"
-			android:text = "@string/bind_account"
+			android:text = "Подтвердить почту"
 			android:onClick = "@{() -> viewmodelreg.confirmEmail()}"
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
