--- a/app/src/main/res/layout/c_authorization_phone.xml
+++ b/app/src/main/res/layout/c_authorization_phone.xml
@@ -15,7 +15,7 @@
 		android:layout_margin = "16dp"
 		android:background = "@drawable/shape_card"/>
 	<include android:id = "@+id/include_social_network"
-		layout = "@layout/c_social_network"
+		layout = "@layout/c_social_network_auth"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "@+id/background"
