--- a/app/src/main/res/layout/c_authorization_user_logged_change_pass.xml
+++ b/app/src/main/res/layout/c_authorization_user_logged_change_pass.xml
@@ -51,7 +51,7 @@
 
 				<include
 					android:id = "@+id/include_social_network"
-					layout = "@layout/c_social_network"
+					layout = "@layout/c_social_network_auth"
 					android:layout_width = "wrap_content"
 					android:layout_height = "wrap_content"
 					app:layout_constraintTop_toTopOf = "parent"
