--- a/app/src/main/res/layout/c_registration_01_other.xml
+++ b/app/src/main/res/layout/c_registration_01_other.xml
@@ -6,7 +6,6 @@
     <data>
         <variable name="viewmodelreg" type="ru.jobni.jobni.viewmodel.RegViewModel"/>
         <variable name="viewmodelmain" type="ru.jobni.jobni.viewmodel.MainViewModel"/>
-        <variable name="viewmodelauth" type="ru.jobni.jobni.viewmodel.AuthViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:tools="http://schemas.android.com/tools"
@@ -46,7 +45,7 @@
                   android:text="@string/referral_message"
                   android:textColor="@color/online"/>
         <include android:id="@+id/include_social_network"
-                 layout="@layout/c_social_network"
+                 layout="@layout/c_social_network_reg"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/referral_message"
@@ -55,7 +54,6 @@
                  android:layout_marginTop="16dp"
                  app:viewmodelreg="@{viewmodelreg}"
                  app:viewmodelmain="@{viewmodelmain}"
-                 app:viewmodelauth="@{viewmodelauth}"
                     />
         <Button android:id="@+id/bind_account"
                 android:layout_width="wrap_content"
