--- a/app/src/main/res/layout/c_social_network_auth.xml
+++ b/app/src/main/res/layout/c_social_network_auth.xml
@@ -16,11 +16,6 @@
 			type = "ru.jobni.jobni.viewmodel.AuthViewModel"
 			/>
 
-		<variable
-			name = "viewmodelreg"
-			type = "ru.jobni.jobni.viewmodel.RegViewModel"
-			/>
-
 		<import type = "android.view.View"/>
 	</data>
 
@@ -40,7 +35,7 @@
 			app:srcCompat = "@drawable/ic_user"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("mail")) ? @drawable/shape_button : @drawable/shape_badge}'
 			android:clickable = "@{safeUnbox(viewmodelauth.isBtnUserNotClickable()) ? false : true}"
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserMail" : (viewmodelauth.btnUserLogged.equals("mail") ? "AuthUserLogged" : "AuthUser"))}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("mail") ? "AuthUserLogged" : "AuthUser")}'
 			/>
 
 		<ImageButton
@@ -53,7 +48,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_phone"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("phone")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserPhone" : "AuthUser")}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("AuthUser")}'
 			/>
 
 		<ImageButton
@@ -66,7 +61,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_vk"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("vk")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegVK" : "AuthVK")}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("AuthVK")}'
 			/>
 
 		<ImageButton
@@ -78,7 +73,7 @@
 			app:layout_constraintEnd_toEndOf = "@+id/btn_discord"
 			app:srcCompat = "@drawable/ic_ok"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("ok")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("AuthUser")}'
 			/>
 
 		<ImageButton
@@ -91,7 +86,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_instagram"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("inst")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("AuthUser")}'
 			/>
 
 		<ImageButton
@@ -104,7 +99,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_telegram"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("tel")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("AuthUser")}'
 			/>
 
 		<ImageButton
@@ -117,7 +112,7 @@
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_gmail"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("google")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("AuthUser")}'
 			/>
 
 		<ImageButton
@@ -131,7 +126,7 @@
 			app:srcCompat = "@drawable/ic_facebook"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("fb")) ? @drawable/shape_button : @drawable/shape_badge}'
 			android:clickable = "@{safeUnbox(viewmodelauth.isBtnFBNotClickable()) ? false : true}"
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : (viewmodelauth.btnUserLogged.equals("fb") ? "AuthFBUserLogged" : "AuthFBUser"))}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("fb") ? "AuthFBUserLogged" : "AuthFBUser")}'
 			/>
 
 		<ImageButton
@@ -146,7 +141,7 @@
 			android:layout_marginEnd = "16dp"
 			app:srcCompat = "@drawable/ic_mail_ru"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("mailru")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("AuthUser")}'
 			/>
 
 		<ImageButton
@@ -159,7 +154,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_discord"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("discord")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("AuthUser")}'
 			/>
 
 		<ImageButton
@@ -172,7 +167,7 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_microsoft"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("micro")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("AuthUser")}'
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
