--- a/app/src/main/res/layout/c_social_network_reg.xml
+++ b/app/src/main/res/layout/c_social_network_reg.xml
@@ -12,11 +12,6 @@
 			/>
 
 		<variable
-			name = "viewmodelauth"
-			type = "ru.jobni.jobni.viewmodel.AuthViewModel"
-			/>
-
-		<variable
 			name = "viewmodelreg"
 			type = "ru.jobni.jobni.viewmodel.RegViewModel"
 			/>
@@ -38,9 +33,8 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_phone"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_user"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("mail")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnUserNotClickable()) ? false : true}"
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserMail" : (viewmodelauth.btnUserLogged.equals("mail") ? "AuthUserLogged" : "AuthUser"))}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("mail")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserMail")}'
 			/>
 
 		<ImageButton
@@ -52,8 +46,8 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_vk"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_phone"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("phone")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserPhone" : "AuthUser")}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("phone")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserPhone")}'
 			/>
 
 		<ImageButton
@@ -65,8 +59,8 @@
 			app:layout_constraintEnd_toStartOf = "@+id/bnt_ok"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_vk"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("vk")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegVK" : "AuthVK")}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("vk")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegVK")}'
 			/>
 
 		<ImageButton
@@ -77,8 +71,8 @@
 			app:layout_constraintStart_toStartOf = "@+id/btn_mail_ru"
 			app:layout_constraintEnd_toEndOf = "@+id/btn_discord"
 			app:srcCompat = "@drawable/ic_ok"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("ok")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("ok")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserOther")}'
 			/>
 
 		<ImageButton
@@ -90,8 +84,8 @@
 			app:layout_constraintStart_toEndOf = "@+id/bnt_ok"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_instagram"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("inst")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("inst")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserOther")}'
 			/>
 
 		<ImageButton
@@ -103,8 +97,8 @@
 			app:layout_constraintStart_toEndOf = "@+id/btn_instagram"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_telegram"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("tel")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("tel")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserOther")}'
 			/>
 
 		<ImageButton
@@ -116,8 +110,8 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_facebook"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_gmail"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("google")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("google")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserOther")}'
 			/>
 
 		<ImageButton
@@ -129,9 +123,8 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_mail_ru"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_facebook"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("fb")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = "@{safeUnbox(viewmodelauth.isBtnFBNotClickable()) ? false : true}"
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : (viewmodelauth.btnUserLogged.equals("fb") ? "AuthFBUserLogged" : "AuthFBUser"))}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("fb")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserOther")}'
 			/>
 
 		<ImageButton
@@ -145,8 +138,8 @@
 			android:layout_marginStart = "16dp"
 			android:layout_marginEnd = "16dp"
 			app:srcCompat = "@drawable/ic_mail_ru"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("mailru")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("mailru")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserOther")}'
 			/>
 
 		<ImageButton
@@ -158,8 +151,8 @@
 			app:layout_constraintStart_toEndOf = "@+id/btn_mail_ru"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_discord"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("discord")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("discord")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserOther")}'
 			/>
 
 		<ImageButton
@@ -171,8 +164,8 @@
 			app:layout_constraintStart_toEndOf = "@+id/btn_discord"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_microsoft"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("micro")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelmain.isIncludeSocialNetworkReg? "RegUserOther" : "AuthUser")}'
+			android:background = '@{safeUnbox(viewmodelreg.btnUserLogged.equals("micro")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch("RegUserOther")}'
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
